Fix dependency updates 2